Bug 10452 - Memory leak for "m" at [linux-2.6.24.4/drivers/video/uvesafb.c:184]
Summary: Memory leak for "m" at [linux-2.6.24.4/drivers/video/uvesafb.c:184]
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(Other) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-other
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-13 23:32 UTC by Daniel Marjamäki
Modified: 2008-04-14 20:00 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.24.4
Subsystem:
Regression: ---
Bisected commit-id:


Attachments

Description Daniel Marjamäki 2008-04-13 23:32:18 UTC
[linux-2.6.24.4/drivers/video/uvesafb.c:184]: Memory leak: m

The "Bail out" code doesn't deallocate the local variable "m".
Comment 1 Andrew Morton 2008-04-13 23:34:45 UTC
Please email me a patch?
Comment 2 Andrew Morton 2008-04-14 20:00:44 UTC
I queued a fix, thanks.

Note You need to log in before you can comment on or make changes to this bug.